# ArfaMed

./: README.md
data/: db.sqlite3
src/: data.db.sqlite3  pyproject.toml
src/core/: jazzmin.py  settings.py  urls.py
src/modules/aboutus/: admin.py  apps.py  models.py  serializers.py
src/modules/aboutus/migrations/: 0001_initial.py
src/modules/appointments/: admin.py  models.py  serializers.py  urls.py  views.py
src/modules/appointments/migrations/: 0001_initial.py
src/modules/contactus/: admin.py  apps.py  models.py  serializers.py
src/modules/contactus/migrations/: 0001_initial.py
src/modules/device/: admin.py  apps.py  models.py  serializers.py
src/modules/device/migrations/: 0001_initial.py
src/modules/faq/: admin.py  models.py  serializers.py
src/modules/faq/migrations/: 0001_initial.py
src/modules/global/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/modules/global/migrations/: 0001_initial.py
src/modules/home/: admin.py  models.py  serializers.py  urls.py  views.py
src/modules/home/migrations/: 0001_initial.py
src/modules/message/: models.py  serializers.py  urls.py  views.py
src/modules/message/migrations/: 0001_initial.py
src/modules/servicesidebar/: admin.py  apps.py  models.py  serializers.py
src/modules/servicesidebar/migrations/: 0001_initial.py
src/modules/sidebar/: admin.py  apps.py  models.py  serializers.py
src/modules/sidebar/migrations/: 0001_initial.py
