[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Styop01 <styopmnacakanyan001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
djangorestframework = "^3.14.0"
django-jazzmin = "^2.6.0"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
